# insightswarm-sipher-capstone

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  package-lock.json  plan.md  pyproject.toml  research_app.db
.streamlit/: config.toml
ai_core/evaluation/: README.md
ai_core/graph/: README.md
ai_core/prompts/: README.md
app/: main.py
app/api/: dependencies.py  routes.py
app/core/: __init__.py  logging_config.py
app/db/: database.py
app/graphs/: research_graph.py
app/models/: models.py  schemas.py
app/services/: pdf_service.py
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: README.md
backend/app/scrapers/: README.md
devops/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.landing  Dockerfile.streamlit  README_DEVOPS.md  docker-compose.yml  mongo-init.js
frontend/: implementation_plan.md  package.json  theme_spec.md
frontend/React+Tailwind/: index.html  package-lock.json  package.json
frontend/React+Tailwind/src/: App.jsx  index.css
frontend/React+Tailwind/src/assets/: loadingAnimation.js  researchAnimation.js  successAnimation.js
frontend/React+Tailwind/src/components/: Feedback.jsx  ResearchHeroAnimation.jsx  ResearchPipelineAnimation.jsx
frontend/React+Tailwind/src/pages/: ReportPage.jsx  (+1 more)
frontend/landing/: index.html  package-lock.json  package.json
frontend/landing/css/: styles.css
frontend/landing/js/: script.js
frontend/streamlit/: agentstracker.py  streamlit-app.py
frontend/streamlit/.streamlit/: config.toml
frontend/streamlit/pages/: agentstracker.py  research-history.py
